--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -381,7 +381,7 @@
     "active_station_temp = session.query(Measurement.station, Measurement.tobs).filter(func.strftime('%Y-%m-%d', Measurement.date) > query_date).filter(Measurement.station == active_station).all()\n",
     "active_station_temp_df = pd.DataFrame(active_station_temp, columns=['Station', 'Temperature'])\n",
     "\n",
-    "# Use Pandas Plotting with Matplotlib to plot the data\n",
+    "#Plot as histogram\n",
     "active_station_temp_df.hist(bins=12, figsize=(12, 8))\n",
     "plt.xlabel('Temperature (°F)')\n",
     "plt.ylabel('Frequency')\n",
